# golf

./: .gitignore  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  README_MCP_INTEGRATION.md  integration_plan.md  mcp_authed_adapter.py  mcp_client_example.py  mcp_server_example.py  pyproject.toml  requirements.txt  setup.py  test_auth.py  test_redis_patch.py
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: osv-scanner.yml  test.yml
client/cli/: auth.py  main.py
client/cli/commands/: agents.py  init.py
client/sdk/: __init__.py  manager.py
client/sdk/auth/: agent_auth.py  tokens.py
client/sdk/channel/: __init__.py  agent.py  base.py  manager.py  protocol.py  websocket.py
client/sdk/examples/: websocket_example.py
client/sdk/server/: websocket.py
client/sdk/testing/: websocket_example.py
client/sdk/utils/: url.py
demo/client/: op_client_authed.py
demo/client/bridge/: main.py  op_bridge.py  pyproject.toml
demo/docs/: client-sse.txt  client-stdio.txt  mcp.txt  server-fastmcp.txt  server-session.txt  server-stdio.txt
demo/server/: op_bridge.py  op_client.py  op_server.py
integrations/: __init__.py
integrations/authed_mcp/: pyproject.toml
integrations/authed_mcp/examples/: __init__.py
integrations/mcp/: README.md  __init__.py  adapter.py  client_example.py  pyproject.toml  run_server.py  server.py  server_example.py  setup.py  test_import.py  test_token.py
integrations/mcp/authed_mcp/: adapter.py  client.py  server.py
integrations/mcp/examples/: __init__.py  run_server.py  simple_client.py  simple_server.py
integrations/mcp/examples/client/: .env.example  simple_client.py  simple_mcp_client.py
integrations/mcp/examples/server/: .env.example  simple_mcp_server.py  simple_server.py
integrations/mcp/tests/: test_integration.py  test_no_auth.py  test_old_token.py
k8s/: configmap.yaml  deployment.yaml  external-secret.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret-store.yaml  secrets.yaml  service.yaml
registry/: main.py
registry/api/middleware/: __init__.py
registry/api/routes/: agents.py  logs.py  providers.py  tokens.py
registry/core/: config.py  health.py
registry/core/logging/: audit.py  (+5 more)
registry/db/: __init__.py  models.py
registry/models/: provider.py
registry/services/: agent_service.py  permission_service.py  provider_service.py  token_service.py
src/golf/: __init__.py  _endpoints_fallback.py  middleware.py
tests/: __init__.py  conftest.py  test_decorators.py
tests/auth/: test_api_key.py  test_providers.py
tests/commands/: test_init.py
tests/core/: test_builder.py  test_config.py  test_errors.py  test_instrumentation.py  test_middleware.py  test_middleware_build.py  test_parser.py  test_platform.py  test_startup.py  test_telemetry.py  test_transformer.py
tests/integration/: test_health_check.py  test_readiness_health_endpoints.py
tests/test_integration/: test_enhanced_session_integration.py  test_horizontal_scaling.py  test_session_id_integration.py
tests/test_session/: __init__.py  test_redis_session_id.py  test_redis_session_storage.py
tests/unit/: test_readiness_health.py
(+83 files in other folders)
